# julia-vis

./: .editorconfig  .gitignore  Makefile  Makefile.am  Makefile.in  README  TODO  autogen.sh  config.h.in  configure.ac  demo-gst.sh  encode_with_gst.sh  gcc-optioncheck  test-gst-plugin.sh
gst/: Makefile.am  autogen.sh  config.h.in  configure.ac  encode.sh  extern  test1.bat  test1.sh
gst/src/: element2.c  element2.h  gstaudiovisualizer2.c  gstaudiovisualizer2.h  plugin2.c
m4/: ax_check_gl.m4  ax_check_glu.m4
src/: atomic_tribuf.c  atomic_tribuf3.c  audio.c  colourspace.h  common.h  config.h.in  directfb.c  getsamp.h  glscope.h  gtk.c  line.c  main.c  map.c  map.h  maxsrc.c  mymm.h  old_tribuf.c  optproc.c  pallet.c  pallet.h  pixmisc.c  pixmisc.h  points.c  points.h  sdl-misc.c  sdl-misc.h  sdl-thread.c  sdl.c  sdlsetup.c  sdlsetup.h  terminusIBM.c  terminusIBM.h  tribuf.c  tribuf.h  vec.h
src/audio/: audio-private.h  audio.c  audio.h  beat.c  beat.h  fft.c  filedecode.c  jack.c  portaudio.c  pulseaudio.c  rb.c  rb.h  sdl-test.c  test.c  waspi.c
src/mtwist/: mtwist.c  mtwist.h
src/opengl/: drawscope.c  eglmain.c  fixed_map.c  fpsmain.c  gl_14.c  gl_14.h  gl_maxsrc.c  gl_maxsrc.h  glfixed.h  glfixedmain.c  glfract.c  glfract.h  glmain.c  glmap.c  glmaxsrc.c  glmaxsrc.h  glmisc.c  glmisc.h  glpallet.c  glpallet.h  glscope-test.c  glscope.c  glsl.c  glx_gen.c  glx_gen.h  glxmain.c  mandelbrot.c  offscreen.c  opengl_fix.c  rendertotex.c  rendertotex.h  sdlmain.c
src/opengl/GLee/: GLee.c
src/opengl/egl/: dri-egl.c  eglmisc.h  kms.c  kmsfps.c  xegl.c
src/opengl/fixed/: glf_fract.c  glf_maxsrc.c  glf_pal.c  glmap.c  glmap.h  pallet.c~
src/opengl/fpsservo/: fpsservo.c  fpsservo.h  runstat.h
src/opengl/gles3/: gles3_fract.c  gles3_maxsrc.c  gles3_misc.c  gles3_offscreen.c  gles3_pallet.c  gles3_scope.c  gles3_text.c  gles3misc.h  gles_fract.h  gles_pallet.c  notes.md  sdl2_gles3_main.c
src/opengl/glsl/: glsl_fract.c  glsl_maxsrc.c  glsl_pallet.c
src/opengl/glx/: fpsmain.c  glx_gen.c  glx_gen.h  glxmain.c
src/paratask/: paratask.c  paratask.h  paratask2.c  test.c
src/sdl/: audiotest.c  sdlglmain.c
src/software/: bilin-inlines.h  directfb.c  map.c  map.h  map_stub.c  maxsrc.c  maxsrc.h  mmx.c  mymm.h  palletblit.c  pixformat.h  pixmisc.c  pixmisc.h  pnt_scope.c  point_span.c  scope_render.h  sdl-thread.c  sdl.c  sdlhelp.c  simple_main.c  simple_main.h  softcore.c  softcore.h  span_scope2.c  test_palletblit.c
src/software/sdl/: sdl-palblit.c  sdl-text.c  sdl-thread.c  sdl.c  sdlhelp.c  sdlhelp.h  softscope-test.c  test-scope.c  test_palletblit.c  test_pallets.c
src/software/sdl2/: sdl2-text.c  sdl2main.c
src/software/test/: palblit.c
src/software/x86/: 3dNOW.c  avx2.c  cpuid.c  mmx.c  palblit_mmxsse.c  palblit_mmxsse.h  sse.c  sse2.c  sse4_1.c  ssse3.c  x86_features.h
